--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altair==5.5.0
 anyio==4.9.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==21.2.0
@@ -8,9 +9,12 @@ attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
+blinker==1.9.0
+cachetools==6.1.0
 certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.2.1
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.2
@@ -24,6 +28,8 @@ executing==2.2.0
 fastjsonschema==2.21.1
 fonttools==4.58.4
 fqdn==1.5.1
+gitdb==4.0.12
+GitPython==3.1.44
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -73,9 +79,12 @@ platformdirs==4.3.8
 plotly==6.2.0
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
+protobuf==6.31.1
 psutil==7.0.0
 pure_eval==0.2.3
+pyarrow==20.0.0
 pycparser==2.22
+pydeck==0.9.1
 Pygments==2.19.2
 pyparsing==3.2.3
 pypdfium2==4.30.1
@@ -97,13 +106,17 @@ seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==80.9.0
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.7
 stack-data==0.6.3
+streamlit==1.47.0
 tabula-py==2.10.0
+tenacity==9.1.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
+toml==0.10.2
 tornado==6.5.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250516
@@ -111,6 +124,7 @@ typing_extensions==4.14.0
 tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.5.0
+watchdog==6.0.0
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
