--- a/requirements.txt
+++ b/requirements.txt
@@ -34,9 +34,9 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
-ipykernel==6.29.5
-ipython==9.3.0
-ipython_pygments_lexers==1.1.1
+# ipykernel==6.29.5
+# ipython==9.3.0
+# ipython_pygments_lexers==1.1.1
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
@@ -45,15 +45,15 @@ json5==0.12.0
 jsonpointer==3.0.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
+# jupyter-events==0.12.0
+# jupyter-lsp==2.2.5
+# jupyter_client==8.6.3
+# jupyter_core==5.8.1
+# jupyter_server==2.16.0
+# jupyter_server_terminals==0.5.3
+# jupyterlab==4.4.3
+# jupyterlab_pygments==0.3.0
+# jupyterlab_server==2.27.3
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.3
@@ -91,8 +91,8 @@ pypdfium2==4.30.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytz==2025.2
-pywin32==310
-pywinpty==2.0.15
+# pywin32==310
+# pywinpty==2.0.15
 PyYAML==6.0.2
 pyzmq==27.0.0
 referencing==0.36.2
